[package]
name = "set_derive"
version = "0.1.4"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
license = "MIT"
description = "Using macro to implement the derivation of imitating python language in rust"
readme = "./README.md"
keywords = ["python", "derive", "comprehensions", "macro", "syntax"]

repository = "https://github.com/A4-Tacks/rust-set-derive"
homepage = "https://github.com/A4-Tacks/rust-set-derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[profile.release]
strip = true
lto = true
