[package]
name = "set_derive"
version = "1.1.0"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
license = "MIT"
description = "Using Macros to Implement List comprehension Similar to Python Language"
readme = "./README.md"
keywords = ["python", "comprehensions", "macro", "syntax"]

repository = "https://github.com/A4-Tacks/rust-set-derive"
homepage = "https://github.com/A4-Tacks/rust-set-derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[profile.release]
strip = true
lto = true
